--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jest-css-modules": "^2.1.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
+    "react-test-renderer": "^18.3.1",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.4",
     "ts-node": "^10.9.2",
