--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.3",
     "next": "^14.2.3",
     "react": "^18",
@@ -26,6 +27,7 @@
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
+    "@types/canvas-confetti": "^1.6.4",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.14.2",
     "@types/react": "^18",
