--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.3",
+    "confetti": "^2.0.3",
     "next": "^14.2.3",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
