--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "jest-css-modules": "^2.1.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "react-test-renderer": "^18.3.1",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.5",
